--- a/index.html
+++ b/index.html
@@ -227,9 +227,51 @@
 
     </div>
     <div class="customersect">
-        
+        <div class="container">
+          <h3 class="heading"> Customer Testimonials</h3>
+          <div class="slidersectone slider">
+            <div>
+                <div class="sectcoma">
+                    <img src="./images/commablue.png">
+                </div>
+                <p>“Thank you for such a well-planned and organized tour of Singapore Malaysia. I must 
+                  mention that everything was appreciable especially our stay in Singapore. I will certainly 
+                  recommend Fortune to my friends. Once again thanks for providing the opportunity to have such a nice vacation.”</p>
+                <h6>Hareesh Kumar, Kollam</h6>
+            </div>
+
+          </div>
+
+        </div>
 
     </div>
+    <div class="exploresect">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <h4>
+                Explore the best Indian 
+                travel deals while you plan
+                your dream vacation abroad</h4>
+                <button class="btn">Enquire Now</button>
+
+
+          </div>
+
+
+        </div>
+
+
+
+      </div>
+
+
+
+    </div>
+    <footer>
+      <h6>©2018 Fortune Tours. All Rights Reserved.
+        </h6>
+    </footer>
   </div>
 
   <!-- lightbox -->
